--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -97,7 +97,9 @@
                                         </div>
                                         <div class="form-group col-md-3">
                                             <label for="name">Phường/Xã <span class="text-danger">(*)</span></label>
-                                            <select name="PhuongXa" id="selWard" class="form-select" title="Vui lòng chọn" required></select>
+                                            <select name="PhuongXa" id="selWard" class="form-select" title="Vui lòng chọn" required>
+                                                <option value=""></option>
+                                            </select>
                                             <script>
                                                 $(document).ready(function() {
                                                     $('#selDistrict').on('change', function() {
