--- a/Views/Patients/Register.cshtml
+++ b/Views/Patients/Register.cshtml
@@ -2,7 +2,6 @@
 
 @{
     ViewBag.Title = "Đăng Kí Bệnh Nhân";
-	var cities = ViewBag.Cities;
 }
 
 <h2>Đăng Kí Bệnh Nhân</h2>
@@ -10,15 +9,15 @@
 <form asp-action="Register" method="post">
     <div class="row">
         <div class="form-group col-md-3">
-            <label class="control-label" for="PhoneNumber">Số điện thoại</label>
+            <label class="control-label" for="PhoneNumber">Số điện thoại <span class="text-danger">(*)</span></label>
             <input class="form-control" type="text" name="PhoneNumber" placeholder="0909000000" required asp-for="PhoneNumber" />
         </div>
         <div class="form-group col-md-3">
-            <label class="control-label" for="Name">Họ tên</label>
+            <label class="control-label" for="Name">Họ tên <span class="text-danger">(*)</span></label>
             <input class="form-control" type="text" name="Name" placeholder="Nguyễn Văn A" required asp-for="Name" />
         </div>
         <div class="form-group col-md-3">
-            <label class="control-label ">Ngày sinh</label>
+            <label class="control-label ">Ngày sinh <span class="text-danger">(*)</span></label>
             <input class="form-control" autocomplete="off" type="date" name="DateOfBirth"
                     pattern="\d{1,2}/\d{1,2}/\d{4}" placeholder="Ngày/Tháng/Năm" required asp-for="DateOfBirth">
         </div>
@@ -30,17 +29,17 @@
 
     <div class="row">
         <div class="form-group col-md-3">
-            <label class="control-label ">Tỉnh/TP</label>
+            <label class="control-label ">Tỉnh/TP <span class="text-danger">(*)</span></label>
             <select class="form-select" name="CityId" id="selectCity" title="Vui lòng chọn" required asp-for="CityId">
                 <option selected>Vui lòng chọn</option>
-                @foreach (var city in cities)
+                @foreach (var city in (List<City>)ViewBag.Cities)
                 {
                     <option value="@city.CityId">@city.Name</option>
                 }
             </select>
         </div>
         <div class="form-group col-md-3">
-            <label class="control-label">Quận/Huyện</label>
+            <label class="control-label">Quận/Huyện <span class="text-danger">(*)</span></label>
             <select name="DistrictId" id="selectDistrict" class="form-select" title="Vui lòng chọn" required asp-for="DistrictId">
                 <option value=""></option>
             </select>
@@ -68,7 +67,7 @@
             </script>
         </div>
         <div class="form-group col-md-3">
-            <label class="control-label ">Phường/Xã</label>
+            <label class="control-label ">Phường/Xã <span class="text-danger">(*)</span></label>
             <select name="WardId" id="selectWard" class="form-select" title="Vui lòng chọn" required asp-for="WardId">
                 <option value=""></option>
             </select>
@@ -96,33 +95,33 @@
             </script>
         </div>
         <div class="form-group col-md-3">
-            <label class="control-label">Số nhà/Đường</label>
+            <label class="control-label">Số nhà/Đường <span class="text-danger">(*)</span></label>
             <input class="form-control" type="text" name="NumberAndRoad" asp-for="NumberAndRoad"/>
         </div>
     </div>
 
     <div class="row">
         <div class="form-group col-md-3">
-            <label class="control-label ">Giới tính</label>
-            <select class="form-select" id="selectGender" name="IsMale" title="Vui lòng chọn" asp-for="IsMale">
+            <label class="control-label ">Giới tính <span class="text-danger">(*)</span></label>
+            <select class="form-select" id="selectGender" name="IsMale" title="Vui lòng chọn" required asp-for="IsMale">
                 <option value="true" selected>Nam</option>
                 <option value="false">Nữ</option>
             </select>
         </div>
         <div class="form-group col-md-3">
             <label class="control-label">Quốc tịch</label>
-            <select class="form-select" name="Nationality" id="selectNationality" title="Vui lòng chọn"
-                    data-size="8" asp-for="Nationality"></select>
+            <select class="form-select" name="NationalityId" id="selectNationality" title="Vui lòng chọn"
+                    asp-for="NationalityId"></select>
         </div>
         <div class="form-group col-md-3">
             <label class="control-label ">Dân tộc</label>
-            <select class="form-select" name="Ethnicity" id="selectEthnicity" title="Vui lòng chọn"
-                    data-size="8" asp-for="Ethnicity"></select>
+            <select class="form-select" name="EthnicityId" id="selectEthnicity" title="Vui lòng chọn"
+                    asp-for="EthnicityId"></select>
         </div>
         <div class="form-group col-md-3">
             <label class="control-label">Nghề nghiệp</label>
-            <select class="form-select" name="Profession" id="selectProfession" title="Vui lòng chọn"
-                    data-size="8" asp-for="Profession"></select>
+            <select class="form-select" name="ProfessionId" id="selectProfession" title="Vui lòng chọn"
+                    asp-for="ProfessionId"></select>
         </div>
         <script>
             $(document).ready(function () {
