--- a/Views/Home/Index.cshtml
+++ b/Views/Home/Index.cshtml
@@ -42,7 +42,9 @@
                                         </div>
                                         <div class="form-group col-md-3">
                                             <label for="name">Họ Tên <span class="text-danger">(*)</span></label>
-                                            <input id="HoTen" name="HoTen" type="text" class="form-control input-uppercase-first" placeholder="Nguyễn Văn A" maxlength="50" autocomplete="off" required />
+                                            <input id="HoTen" name="HoTen" type="text" class="form-control input-uppercase-first"
+                                                    placeholder="Nguyễn Văn A" maxlength="50" autocomplete="off" required 
+                                                    value="@User.Identity.Name"/>
                                             <div class="invalid-feedback">Không được bỏ trống</div>
                                         </div>
                                         <div class="form-group col-md-3">
